# Jothly-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Constants.hpp  Engine.cpp  Engine.h  Event.cpp  Event.h  Gravity.sln  Input.cpp  Input.h  InputCodes.hpp  Jothly.cpp  Jothly.sln  Jothly.vcxproj  Jothly.vcxproj.filters  LICENSE  LICENSE.txt  Math.cpp  Math.h  README.md  SignalObserver.cpp  SignalObserver.h  SignalSubject.cpp  SignalSubject.h  THE_PLAN.txt  Vector2.cpp  Vector2.h  Vector2i.cpp  Vector2i.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  Window.cpp  Window.h  main.cpp
_build/: AStarGraph.cpp  AStarGraph.h  AStarNode.cpp  AStarNode.h  Color.cpp  Color.h  ColorTestSet.cpp  ColorTestSet.h  Component.cpp  Component.h  ComponentFactory.h  ComponentID.hpp  Constants.hpp  DelaunayPoint.cpp  DelaunayPoint.h  DelaunayTriangle.cpp  DelaunayTriangle.h  DelaunayTriangleTestSet.cpp  DelaunayTriangleTestSet.h  GameObject.cpp  GameObject.h  Gravity.vcxproj  Gravity.vcxproj.filters  Input.cpp  Input.h  InputCodes.hpp  Jothly.vcxproj  Jothly.vcxproj.filters  Math.cpp  Math.h  Math.hpp  NavMesh.cpp  NavMeshAgent.cpp  NavMeshAgent.h  NavMeshObstacle.h  Navmesh.h  Quaternion.cpp  Quaternion.h  QuaternionTestSet.cpp  QuaternionTestSet.h  (+52 more)
cmake-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Jothly.sln  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  TestRunJothly.vcxproj  TestRunJothly.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ray.vcxproj  ray.vcxproj.filters
(+118 files in other folders)
