cmake_minimum_required(VERSION 3.10)
project(Jothly VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

add_subdirectory(raylib-master)
add_library(ray STATIC raylib-master/src/raylib.h)
target_include_directories(ray PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/raylib-master")
target_include_directories(ray PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/raylib-master/src")
set_target_properties(ray PROPERTIES LINKER_LANGUAGE C)
add_executable(TestRunJothly _build/game.cpp)
link_directories(${CMAKE_CURRENT_BINARY_DIR}/Debug)
link_directories(raylib-master)
target_link_libraries(TestRunJothly PRIVATE ray)
#target_include_directories(raylib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/raylib-master/src")
#target_link_libraries(raylib PRIVATE raylib)
#target_link_libraries(raylib PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/raylib-master/src")
